Bug 14963: Fix ergonomic issue on small screen
Sponsored-by: BULAC - http://www.bulac.fr/

--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -1664,6 +1664,7 @@ div {
     a {
         font-weight: bold;
         text-decoration: none;
+        text-align: left;
     }
 }
 
